@@ -8,12 +8,11 @@ use Moose::Util::TypeConstraints qw(subtype as where);
 use Devel::Declare ();
 use Sub::Install qw( install_sub );
 use Moose::Meta::Class ();
-use List::MoreUtils qw( uniq );
 use Module::Runtime 'use_module';
 
 use aliased 'MooseX::Declare::Context';
 
-use namespace::autoclean;
+use namespace::autoclean -also => ['_uniq'];
 
 =head1 DESCRIPTION
 
@@ -118,7 +117,7 @@ sub parse_declaration {
     use_module $ctx_class;
 
     # do we have traits?
-    if (my @ctx_traits = uniq $self->context_traits) {
+    if (my @ctx_traits = _uniq($self->context_traits)) {
 
         use_module $_
             for @ctx_traits;
@@ -140,6 +139,8 @@ sub parse_declaration {
     # parse with current context
     return $self->parse($ctx);
 }
+
+sub _uniq { keys %{ +{ map { $_ => undef } @_ } } }
 
 =head1 SEE ALSO
 
